@@ -1,4 +1,4 @@
-.TH "ecasound" "1" "21\&.08\&.2004" "" "Multimedia software" 
+.TH "ecasound" "1" "10\&.10\&.2004" "" "Multimedia software" 
 .PP 
 .SH "NAME" 
 ecasound \- sample editor, multitrack recorder, fx-processor, etc\&.
@@ -289,7 +289,10 @@ is \fB-i:audiofile,foobar\&.ext\fP (same for \fB-o\fP)\&.
 If libsndfile support was enabled at compile-time, this
 option allows you to force Ecasound to use libsndfile 
 for reading/writing a certain audio file\&. Option syntax 
-is \fB-i:sndfile,foobar\&.ext\fP (same for \fB-o\fP)\&.
+is \fB-i:sndfile,foobar\&.ext[,\&.format-ext]\fP (same for \fB-o\fP)\&.
+The optional third parameter "format" can be used to 
+override the audio format (for example you can create an
+AIFF file with filename "foo\&.wav")\&.
 .IP 
 .IP "Loop device" 
 Loop devices make it possible to route data between chains\&.
