@@ -74,7 +74,7 @@ class SNDFILE_INTERFACE : public AUDIO_IO_BUFFERED {
   /*@{*/
 
   virtual int supported_io_modes(void) const { return(io_read | io_write | io_readwrite); }
-  virtual string parameter_names(void) const { return("filename,opt_filename"); }
+  virtual string parameter_names(void) const { return("filename,opt_filename,format"); }
   virtual bool locked_audio_format(void) const { return(true); }
   
   virtual void open(void) throw(AUDIO_IO::SETUP_ERROR&);
@@ -87,6 +87,7 @@ class SNDFILE_INTERFACE : public AUDIO_IO_BUFFERED {
 private:
 
   std::string opt_filename_rep;
+  std::string opt_format_rep;
   SNDFILE* snd_repp;
   long samples_read;
   bool finished_rep;
